@@ -7,6 +7,9 @@
    - stevesk@cvs.openbsd.org 2002/02/04 20:41:16
      [ssh-agent.1]
      more sync for default ssh-add identities; ok markus@
+   - djm@cvs.openbsd.org 2002/02/05 00:00:46
+     [sftp.1 sftp.c sftp-client.c sftp-client.h sftp-int.c]
+     Add "-B" option to specify copy buffer length (default 32k); ok markus@
 
 20020205
  - (djm) Cleanup after sync:
@@ -7513,4 +7516,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1829 2002/02/08 11:02:16 djm Exp $
+$Id: ChangeLog,v 1.1830 2002/02/08 11:04:05 djm Exp $
